syntax = "proto3";

package bigstar.character;

option go_package = "github.com/LinkedInLearning/beginner-s-guide-to-go-Proto-protocol-buffer-go-4378006/go/character";

option java_package = "com.example.bigstar.character.service";
option java_outer_classname = "CharacterProto";
option java_multiple_files = true;

import "character/message.proto";

service CharacterService {
  rpc GetCharacters(AllCharactersRequest) returns (AllCharactersResponse);
  rpc GetCharacterById(GetCharacterRequest) returns (GetCharacterResponse);
}